--- a/TYPESCRIPT/SERVER/package.json
+++ b/TYPESCRIPT/SERVER/package.json
@@ -21,6 +21,7 @@
         "@types/express": "^4.17.21",
         "@types/express-fileupload": "^1.5.0",
         "@types/express-validator": "^3.0.0",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^20.14.2",
         "@types/uuid": "^10.0.0",
@@ -37,6 +38,7 @@
         "express": "^4.19.2",
         "express-fileupload": "^1.5.1",
         "express-validator": "^7.1.0",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.2",
         "node": "^20.16.0",
         "uuid": "^10.0.0"
