--- a/FINAL_API/.env
+++ b/FINAL_API/.env
@@ -1,1 +1,2 @@
 PORT=3000
+MONGO_URI=mongodb+srv://GuimaraesSilva:1234@guimaraessilva.33tnv9p.mongodb.net/moviedb?retryWrites=true&w=majority&appName=GuimaraesSilva
