--- a/FINAL_API/package.json
+++ b/FINAL_API/package.json
@@ -39,12 +39,18 @@
     }
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "express-jsdoc-swagger": "^1.8.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
   }
 }
