'Create the folders'

--- a/FINAL_API/.env
+++ b/FINAL_API/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGO_URI=mongodb+srv://GuimaraesSilva:1234@guimaraessilva.33tnv9p.mongodb.net/moviedb?retryWrites=true&w=majority&appName=GuimaraesSilva
+JWT_SECRET=IMB_jwt_MOVIES
