--- a/FINAL_API/package.json
+++ b/FINAL_API/package.json
@@ -22,6 +22,8 @@
     "@types/express-fileupload": "^1.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.3.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
@@ -50,6 +52,7 @@
     "express-jsdoc-swagger": "^1.8.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
   }
